[#85] chore: Serial Api 문서화를 위한 adoc 파일을 작성한다.

--- a/src/docs/asciidoc/main.adoc
+++ b/src/docs/asciidoc/main.adoc
@@ -22,3 +22,8 @@ include::user/user.adoc[]
 === LibraryBook Api
 
 include::librarybook/librarybook.adoc[]
+
+
+=== Serial Api
+
+include::serial/serial.adoc[]
