[#85] chore: WishBook Api 문서화를 위한 adoc 파일을 작성한다.

--- a/src/docs/asciidoc/main.adoc
+++ b/src/docs/asciidoc/main.adoc
@@ -27,3 +27,8 @@ include::librarybook/librarybook.adoc[]
 === Serial Api
 
 include::serial/serial.adoc[]
+
+
+=== WishBook Api
+
+include::wishbook/wishbook.adoc[]
