--- a/src/docs/asciidoc/main.adoc
+++ b/src/docs/asciidoc/main.adoc
@@ -32,3 +32,8 @@ include::serial/serial.adoc[]
 === WishBook Api
 
 include::wishbook/wishbook.adoc[]
+
+
+=== RentHistory Api
+
+include::renthistory/renthistory.adoc[]
