[#99] chore: github 인증확인 Api를 문서화한다.

--- a/src/docs/asciidoc/main.adoc
+++ b/src/docs/asciidoc/main.adoc
@@ -37,3 +37,8 @@ include::wishbook/wishbook.adoc[]
 === RentHistory Api
 
 include::renthistory/renthistory.adoc[]
+
+
+=== OAuth Api
+
+include::oauth/oauth.adoc[]
