[#107] style: WishBook 테스트 메서드의 DisplayName을 수정한다.
- WishBookControllerTest
- WishBookEnrollControllerTest

--- a/src/docs/asciidoc/wishbook/wishbook.adoc
+++ b/src/docs/asciidoc/wishbook/wishbook.adoc
@@ -1,27 +1,27 @@
-==== wishbook 목록을 조회한다.
+==== 희망도서 목록에서 도서를 조회한다.
 
 include::successfully-find-wish-books.adoc[]
 
-==== wishbook을 등록한다.
+==== 희망 도서목록에 도서를 등록한다.
 
 include::successfully-create-wish-book.adoc[]
 
-==== 요청한 희망도서가 이미 요청되었으면, 희망도서 등록에 실패한다.
+==== 요청한 희망도서가 요청목록에 존재하면, 희망도서 등록을 실패한다.
 
 include::failed-created-wish-book.adoc[]
 
-==== wishbook을 삭제한다.
+==== 희망도서 목록에서 희망도서를 삭제한다.
 
 include::successfully-delete-wish-book.adoc[]
 
-==== wishbook을 삭제하고 librarybook에 등록한다.
+==== 구입된 희망도서가 도서목록에 등록한다.
 
 include::successfully-enroll.adoc[]
 
-==== 희망도서에 등록되어 구입이 완료된 도서를 희망도서로 등록을 요청하면, 희망도서 등록을 실패한다.
+==== 희망도서에 등록되어 이미 구입이 완료된 도서를 도서목록에 등록하면, 도서목록 등록을 실패한다.
 
 include::failed-enroll-already-soft-deleted.adoc[]
 
-==== 희망도서로 요청한 도서가 존재하지 않으면, 희망도서 등록을 실패한다.
+==== 희망도서를 도서목록에 등록할 때 희망도서가 희망 도서목록에 존재하지 않으면, 도서목록 등록을 실패한다.
 
 include::failed-enroll-not-found-wish-book-id.adoc[]
