--- a/src/docs/asciidoc/user/successfully-count-of-user.adoc
+++ b/src/docs/asciidoc/user/successfully-count-of-user.adoc
@@ -1,20 +1,20 @@
 ===== HTTP Request
 
-include::../{snippets}/user-controller-test/successfully-count-of-user/http-request.adoc[]
+include::{snippets}/user-controller-test/successfully-count-of-user/http-request.adoc[]
 
 ===== request body
 
-include::../{snippets}/user-controller-test/successfully-count-of-user/request-body.adoc[]
+include::{snippets}/user-controller-test/successfully-count-of-user/request-body.adoc[]
 
 
 ===== HTTP Response
 
-include::../{snippets}/user-controller-test/successfully-count-of-user/http-response.adoc[]
+include::{snippets}/user-controller-test/successfully-count-of-user/http-response.adoc[]
 
 ===== response body
 
-include::../{snippets}/user-controller-test/successfully-count-of-user/response-body.adoc[]
+include::{snippets}/user-controller-test/successfully-count-of-user/response-body.adoc[]
 
 ===== description
 
-include::../{snippets}/user-controller-test/successfully-count-of-user/response-fields.adoc[]
+include::{snippets}/user-controller-test/successfully-count-of-user/response-fields.adoc[]
