[#113] fix: User Api의 REST Docs 경로를 수정한다.

--- a/src/docs/asciidoc/user/successfully-find-user-by-id.adoc
+++ b/src/docs/asciidoc/user/successfully-find-user-by-id.adoc
@@ -1,6 +1,6 @@
 ===== HTTP Request
 
-include::../{snippets}/user-controller-test/successfully-find-user-by-id/http-request.adoc[]
+include::{snippets}/user-controller-test/successfully-find-user-by-id/http-request.adoc[]
 
 ===== request body
 
