--- a/src/docs/asciidoc/main.adoc
+++ b/src/docs/asciidoc/main.adoc
@@ -37,3 +37,8 @@ include::wishbook/wishbook.adoc[]
 === RentHistory Api
 
 include::renthistory/renthistory.adoc[]
+
+
+=== External Api
+
+include::common/common.adoc[]
