--- a/src/docs/asciidoc/common/naverapi/successfully-search-from-naver-api.adoc
+++ b/src/docs/asciidoc/common/naverapi/successfully-search-from-naver-api.adoc
@@ -2,7 +2,11 @@
 
 include::../../{snippets}/naver-api-controller-test/successfully-search-from-naver-api/http-request.adoc[]
 
-====== request parameters
+====== request body
+
+include::../../{snippets}/naver-api-controller-test/successfully-search-from-naver-api/request-body.adoc[]
+
+====== description
 
 include::../../{snippets}/naver-api-controller-test/successfully-search-from-naver-api/request-parameters.adoc[]
 
