[#133] chore: RentHistory 의 유저의 반납 내역 조회에 대한 내용을 Rest Docs 에 추가한다.

--- a/src/docs/asciidoc/renthistory/renthistory.adoc
+++ b/src/docs/asciidoc/renthistory/renthistory.adoc
@@ -2,6 +2,10 @@
 
 include::successfully-find-all-rent-history-by-user.adoc[]
 
+==== 회원의 도서반납 목록을 조회한다.
+
+include::successfully-find-all-return-history-by-user.adoc[]
+
 ==== 도서를 대여를 한다.
 
 include::successfully-rent-a-book.adoc[]
