[#148] chore: 엘라스틱서치를 이용한 키워드 조회 테스트 메서드를 Rest Docs에 추가한다.

--- a/src/docs/asciidoc/librarybook/librarybook.adoc
+++ b/src/docs/asciidoc/librarybook/librarybook.adoc
@@ -29,3 +29,7 @@ include::successfully-read-library-books.adoc[]
 ==== 페이지와 페이지에 대한 도서 수에 문자를 입력하면, 도서목록 조회를 실패한다.
 
 include::failed-read-library-books.adoc[]
+
+==== 키워드로 도서를 조회한다.
+
+include::successfully-search-keyword.adoc[]
